--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -1,6 +1,6 @@
 +++
 title = "Regula Payments NZ"
-linkTitle = "Regula Payments"
+linkTitle = "Regula"
 
 +++
 
@@ -16,7 +16,7 @@ linkTitle = "Regula Payments"
 Regula aims is to ___disrupt___ the ***Online Payment Processing Industry*** for New Zealand SaaS business.
 {{% /blocks/lead %}}
 
-{{< blocks/section color="dark" >}}
+{{< blocks/section color="white" >}}
 {{% blocks/feature icon="fa-lightbulb" title="Realize the Open Banking Opportunity" %}}
 Free your business from the ***Greedy*** encumbent Payment Processor fees!
 {{% /blocks/feature %}}
@@ -33,14 +33,6 @@ Our focus is recurring Payments which can be for any* amount you need; even only
 Find out how to get started and latest features on Github!
 {{% /blocks/feature %}}
 
-
-{{< /blocks/section >}}
-
-
-{{< blocks/section >}}
-<div class="col">
-<h1 class="text-center">Project currently under Development</h1>
-</div>
 
 {{< /blocks/section >}}
 
