--- a/content/en/about/_index.html
+++ b/content/en/about/_index.html
@@ -8,31 +8,22 @@ menu:
 ---
 
 
-{{< blocks/cover title="About Goldydocs" image_anchor="bottom" height="min" >}}
+{{< blocks/cover title="About Regula" image_anchor="bottom" height="min" >}}
 
-<p class="lead mt-5">A sample site using the Docsy Hugo theme.
+<p class="lead mt-5">No more <strong>Hefty</strong> Payment Processing fees!
 </p>
 
 {{< /blocks/cover >}}
 
 {{% blocks/lead %}}
-Goldydocs is a sample site using the <a href="https://github.com/google/docsy">Docsy</a> Hugo theme that shows what it can do and provides you with a template site structure. It’s designed for you to clone and edit as much as you like. See the different sections of the documentation and site for more ideas.
+___Regula___ is a __Tierra Technologies__ project in response to our disgust with the encumbent <strong>Payment Processors</strong> who continue to charge ridiculous fees for a commodity service.
 {{% /blocks/lead %}}
 
 
 {{< blocks/section >}}
 <div class="col-12">
-<h1 class="text-center">This is another section</h1>
+<h1 class="text-center">Watch this space</h1>
 </div>
 
 {{< /blocks/section >}}
 
-
-
-{{< blocks/section >}}
-
-<div class="col-12">
-<h1 class="text-center">This is another section</h1>
-</div>
-
-{{< /blocks/section >}}
