--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -29,7 +29,7 @@ Our focus is recurring Payments which can be for any* amount you need; even only
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-github" title="Built for Developers" url="https://twitter.com/docsydocs" %}}
+{{% blocks/feature icon="fab fa-github" title="Built for Developers"%}}
 Find out how to get started and latest features on Github!
 {{% /blocks/feature %}}
 
