--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -23,14 +23,14 @@ Free your business from the ***Greedy*** encumbent Payment Processor fees!
 
 
 {{% blocks/feature icon="fa-user-graduate" title="Smart Subscriptions"  %}}
-Our focus is recurring Payments which can be for any* amount you need; even only a few cents!
+Our focus is recurring Payments which can be for _any amount*_ you need; even only a few cents!
 
 *Well almost any ;)
 {{% /blocks/feature %}}
 
 
 {{% blocks/feature icon="fab fa-github" title="Built for Developers"%}}
-Find out how to get started and latest features on Github!
+More details coming soon
 {{% /blocks/feature %}}
 
 
